# De-Diffusion

./: .gitignore  LICENSE  Makefile  README.md  inference.py  pyproject.toml  requirements.txt  train.py  train_model.py
DeDiffuser/: __init__.py  predict_model.py  train_model.py
DeDiffuser/models/: decoder.py  encoder.py
DeDiffusion/dataloader/: make_dataset.py
configs/: main.yaml
configs/epoch/: epoch.yaml
configs/model/: model.yaml
configs/predict/: predict.yaml
diffuser/: __init__.py
diffuser/models/: decoder.py  encoder.py
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
logs/: logger.py
models/: encoder.py
outputs/2024-01-12/19-18-01/.hydra/: hydra.yaml
outputs/2024-01-12/19-18-12/.hydra/: hydra.yaml
outputs/2024-01-12/19-18-36/.hydra/: hydra.yaml
outputs/2024-01-12/19-18-56/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-12/19-20-52/.hydra/: hydra.yaml
outputs/2024-01-12/19-23-05/.hydra/: hydra.yaml
outputs/2024-01-12/19-25-45/.hydra/: hydra.yaml
outputs/2024-01-12/19-28-45/.hydra/: hydra.yaml
outputs/2024-01-12/19-30-10/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-12/19-30-33/.hydra/: hydra.yaml
outputs/2024-01-12/19-31-08/.hydra/: hydra.yaml
outputs/2024-01-12/19-31-39/.hydra/: hydra.yaml
outputs/2024-01-12/22-14-55/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-12/22-22-47/.hydra/: hydra.yaml
outputs/2024-01-12/22-25-05/.hydra/: hydra.yaml
outputs/2024-01-12/22-34-05/.hydra/: hydra.yaml
tests/: __init__.py  test_model.py
(+9 files in other folders)
